# cmake_cpp_template

./: .gitignore  CMakeLists.txt
app/: main.cpp
include/: sample_class.h
src/: sample_class.cpp
tests/: CMakeLists.txt  test_sample.cpp
